{{$NEXT}}

2.045     2015-08-11 23:37:14+02:00 Europe/Prague

Fixes:
* PL::Ipipan: the 'conj' tag split to 'conj' and 'comp' (see the Polish Treebank).



2.044     2015-08-07 22:42:01+02:00 Europe/Prague

Drivers:
* SL::Multext

Fixes:
* FeatureStructure::get($feature) should never return undef.
  It now returns the empty value instead.



2.043     2015-07-17 16:51:12+02:00 Europe/Prague

Interface:
* FeatureStructure has new methods to remove the value of a feature:
  generic clear($feature) and specific for each feature, e.g. clear_pos().
  Until now the only method was to set the empty value ('').

Fixes:
* Improved documentation of FeatureStructure::get_ufeatures() and add_ufeatures()
  (these are methods, not static functions!)



2.042     2015-07-08 14:43:31+02:00 Europe/Prague

Drivers:
* LA::Itconll

Fixes:
* Fixed bug in get_ufeatures(): Foreign=Foreign (was mistakenly Foreign=Yes).
* Removed the FeatureStructure::is_valid() method. It is not needed since 2.019
  when we disallowed setting unknown features or values.



2.041     2015-02-27 16:07:10+01:00 Europe/Prague

Drivers:
* ZH::Conll



2.040     2015-02-26 13:44:07+01:00 Europe/Prague

Drivers:
* TR::Conll



2.039     2015-02-24 15:54:15+01:00 Europe/Prague

Drivers:
* TA::Tamiltb
* TE::Conll
* UR::Conll



2.038     2015-02-23 08:06:54+01:00 Europe/Prague

Drivers:
* RO::Rdt
* RU::Syntagrus
* SK::Snk
* SL::Conll



2.037     2015-02-20 17:39:15+01:00 Europe/Prague

Drivers:
* PT::Conll



2.036     2015-02-13 12:42:55+01:00 Europe/Prague

Drivers:
* PL::Ipipan



2.035     2015-02-11 12:23:30+01:00 Europe/Prague

Drivers:
* NO::Conll
* NL::Cgn: added the old tag for adverbs, BW() (besides the new tag, BIJW()).



2.034     2015-02-10 22:27:41+01:00 Europe/Prague

Interface:
* FeatureStructure has new methods is_interrogative() and is_relative().

Features:
* New value 'dim' of the feature 'degree': diminutive. Applicable to multiple languages, systematically needed in Dutch.